--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,18 @@ dependencies:
   get: ^4.7.2
   intl: ^0.20.2
   google_sign_in: ^6.2.1
+  pinput: ^4.0.0
+  smooth_page_indicator: ^1.1.0
+  firebase_storage: ^11.7.5
+  image_picker: ^1.1.2
+  cloudinary_public: ^0.23.1
+  cloudinary_flutter: ^1.2.0
+  cloudinary_url_gen: ^1.2.0
+  collection: ^1.18.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+
 
 dev_dependencies:
   flutter_test:
