--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   cloudinary_flutter: ^1.2.0
   cloudinary_url_gen: ^1.2.0
   collection: ^1.18.0
+  camera: ^0.11.3
+  google_mlkit_face_detection: ^0.13.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
