--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,9 +47,12 @@ dependencies:
   collection: ^1.18.0
   camera: ^0.11.3
   google_mlkit_face_detection: ^0.13.1
+  permission_handler: ^11.3.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_contacts: ^1.1.9+2
+#  contacts_service: ^0.6.3
 
 
 dev_dependencies:
