--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_contacts: ^1.1.9+2
+  dio: ^5.4.3
+  path_provider: ^2.1.3
+  gal: ^2.2.0
 #  contacts_service: ^0.6.3
 
 
